Align with 2.28.x: cherry-pick geofence changes onto 2.28.x base
Rebases all 5 geofence commits cleanly onto origin/2.28.x via cherry-pick.
No conflicts; only geofence files and src/pom.xml are changed vs 2.28.x.