@@ -185,7 +185,7 @@ public class CatalogBackupRestoreTasklet extends AbstractCatalogBackupRestoreTas
 
             if (!filterIsValid()) {
                 // Backup additional stuff only when performing a FULL backup
-                backupFullAdditional(dd, resourceStore, targetBackupFolder);
+                backupFullAdditionals(dd, resourceStore, targetBackupFolder);
             } else {
                 // backup selected GWC artifacts
                 backupFilteredGwc(dd, resourceStore, targetBackupFolder);
@@ -250,7 +250,7 @@ public class CatalogBackupRestoreTasklet extends AbstractCatalogBackupRestoreTas
     }
 
     /** Backup additional stuff only when performing a FULL backup. */
-    private void backupFullAdditional(
+    private void backupFullAdditionals(
             final GeoServerDataDirectory dd, final ResourceStore resourceStore, Resource targetBackupFolder)
             throws IOException, Exception {
         // Backup GeoServer Plugins
@@ -731,8 +731,7 @@ public class CatalogBackupRestoreTasklet extends AbstractCatalogBackupRestoreTas
     }
 
     /** */
-    @SuppressWarnings("unchecked")
-    private void restoreWorkSpacesAndLayers(Resource sourceRestoreFolder, Resource workspaces) throws Exception {
+    private void restoreWorkSpacesAndLayers(Resource sourceRestoreFodler, Resource workspaces) throws Exception {
         // - Restore Default Workspace
         if (!filterIsValid() || !filteredResource(getCatalog().getDefaultWorkspace(), true)) {
             Files.delete(workspaces.get("default.xml").file());
@@ -742,7 +741,7 @@ public class CatalogBackupRestoreTasklet extends AbstractCatalogBackupRestoreTas
         // - Restore Workspaces/Namespaces definitions and settings
         for (WorkspaceInfo ws : getCatalog().getWorkspaces()) {
             if (!filteredResource(ws, true)) {
-                // Restore Workspace and Namespace configuration
+                // Restore Workspace and Namespace confifuration
                 // - Prepare Folder
                 Resource wsFolder = BackupUtils.dir(workspaces, ws.getName());
                 if (getFilters().length == 1 || getFilters()[1] == null) {
@@ -754,7 +753,7 @@ public class CatalogBackupRestoreTasklet extends AbstractCatalogBackupRestoreTas
 
                 // Restore DataStores/CoverageStores
                 for (DataStoreInfo ds : getCatalog().getStoresByWorkspace(ws.getName(), DataStoreInfo.class)) {
-                    if (!filteredResource(ds, ws, true, DataStoreInfo.class)) {
+                    if (!filteredResource(ds, ws, true, StoreInfo.class)) {
                         // - Prepare Folder
                         Resource dsFolder = BackupUtils.dir(wsFolder, ds.getName());
 
@@ -766,7 +765,7 @@ public class CatalogBackupRestoreTasklet extends AbstractCatalogBackupRestoreTas
 
                         // Restore Resources
                         for (FeatureTypeInfo ft : getCatalog().getFeatureTypesByDataStore(ds)) {
-                            if (!filteredResource(ft, ws, true, FeatureTypeInfo.class)) {
+                            if (!filteredResource(ft, ws, true, ResourceInfo.class)) {
                                 // - Prepare Folder
                                 Files.delete(dsFolder.get(ft.getName()).dir());
                                 Resource ftFolder = BackupUtils.dir(dsFolder, ft.getName());
@@ -778,7 +777,7 @@ public class CatalogBackupRestoreTasklet extends AbstractCatalogBackupRestoreTas
                                     if (!filteredResource(ly, ws, true, LayerInfo.class)) {
                                         doWrite(ly, ftFolder, "layer.xml");
 
-                                        Resource ftResource = sourceRestoreFolder.get(Paths.path(
+                                        Resource ftResource = sourceRestoreFodler.get(Paths.path(
                                                 "workspaces/" + ws.getName() + "/" + ds.getName(), ft.getName()));
                                         List<Resource> resources = Resources.list(
                                                 ftResource,
@@ -805,7 +804,7 @@ public class CatalogBackupRestoreTasklet extends AbstractCatalogBackupRestoreTas
                 }
 
                 for (CoverageStoreInfo cs : getCatalog().getStoresByWorkspace(ws.getName(), CoverageStoreInfo.class)) {
-                    if (!filteredResource(cs, ws, true, CoverageStoreInfo.class)) {
+                    if (!filteredResource(cs, ws, true, StoreInfo.class)) {
                         // - Prepare Folder
                         Resource csFolder = BackupUtils.dir(wsFolder, cs.getName());
 
@@ -815,7 +814,7 @@ public class CatalogBackupRestoreTasklet extends AbstractCatalogBackupRestoreTas
 
                         // Restore Resources
                         for (CoverageInfo ci : getCatalog().getCoveragesByCoverageStore(cs)) {
-                            if (!filteredResource(ci, ws, true, CoverageInfo.class)) {
+                            if (!filteredResource(ci, ws, true, ResourceInfo.class)) {
                                 // - Prepare Folder
                                 Files.delete(csFolder.get(ci.getName()).dir());
                                 Resource ciFolder = BackupUtils.dir(csFolder, ci.getName());
@@ -827,7 +826,7 @@ public class CatalogBackupRestoreTasklet extends AbstractCatalogBackupRestoreTas
                                     if (!filteredResource(ly, ws, true, LayerInfo.class)) {
                                         doWrite(ly, ciFolder, "layer.xml");
 
-                                        Resource ftResource = sourceRestoreFolder.get(Paths.path(
+                                        Resource ftResource = sourceRestoreFodler.get(Paths.path(
                                                 "workspaces/" + ws.getName() + "/" + cs.getName(), ci.getName()));
                                         List<Resource> resources = Resources.list(
                                                 ftResource,
@@ -854,21 +853,20 @@ public class CatalogBackupRestoreTasklet extends AbstractCatalogBackupRestoreTas
                 }
 
                 for (WMSStoreInfo wms : getCatalog().getStoresByWorkspace(ws.getName(), WMSStoreInfo.class)) {
-                    if (!filteredResource(wms, ws, true, WMSStoreInfo.class)) {
-                        restoreWMSStoreInfo(sourceRestoreFolder, ws, wsFolder, wms);
+                    if (!filteredResource(wms, ws, true, StoreInfo.class)) {
+                        restoreWMSStoreInfo(sourceRestoreFodler, ws, wsFolder, wms);
                     }
                 }
 
                 for (WMTSStoreInfo wmts : getCatalog().getStoresByWorkspace(ws.getName(), WMTSStoreInfo.class)) {
-                    if (!filteredResource(wmts, ws, true, WMTSStoreInfo.class)) {
-                        restoreWMTSStoreInfo(sourceRestoreFolder, ws, wsFolder, wmts);
+                    if (!filteredResource(wmts, ws, true, StoreInfo.class)) {
+                        restoreWMTSStoreInfo(sourceRestoreFodler, ws, wsFolder, wmts);
                     }
                 }
             }
         }
     }
 
-    @SuppressWarnings("unchecked")
     private void restoreWMTSStoreInfo(
             Resource sourceRestoreFodler, WorkspaceInfo ws, Resource wsFolder, WMTSStoreInfo wmts) throws Exception {
         // - Prepare Folder
@@ -886,9 +884,8 @@ public class CatalogBackupRestoreTasklet extends AbstractCatalogBackupRestoreTas
         }
     }
 
-    @SuppressWarnings("unchecked")
     private void restoreWMSStoreInfo(
-            Resource sourceRestoreFolder, WorkspaceInfo ws, Resource wsFolder, WMSStoreInfo wms) throws Exception {
+            Resource sourceRestoreFodler, WorkspaceInfo ws, Resource wsFolder, WMSStoreInfo wms) throws Exception {
         // - Prepare Folder
         Resource wmsFolder = BackupUtils.dir(wsFolder, wms.getName());
 
@@ -899,14 +896,13 @@ public class CatalogBackupRestoreTasklet extends AbstractCatalogBackupRestoreTas
         List<WMSLayerInfo> wmsLayerInfoList = getCatalog().getResourcesByStore(wms, WMSLayerInfo.class);
         for (WMSLayerInfo wl : wmsLayerInfoList) {
             if (!filteredResource(wl, ws, true, ResourceInfo.class)) {
-                restoreWMSLayer(sourceRestoreFolder, ws, wms, wmsFolder, wl);
+                restoreWMSLayer(sourceRestoreFodler, ws, wms, wmsFolder, wl);
             }
         }
     }
 
-    @SuppressWarnings("unchecked")
     private void restoreWTMSLayer(
-            Resource sourceRestoreFolder, WorkspaceInfo ws, WMTSStoreInfo wms, Resource wmsFolder, WMTSLayerInfo wl)
+            Resource sourceRestoreFodler, WorkspaceInfo ws, WMTSStoreInfo wms, Resource wmsFolder, WMTSLayerInfo wl)
             throws Exception {
         // - Prepare Folder
         Files.delete(wmsFolder.get(wl.getName()).dir());
@@ -918,14 +914,13 @@ public class CatalogBackupRestoreTasklet extends AbstractCatalogBackupRestoreTas
         for (LayerInfo ly : getCatalog().getLayers(wl)) {
             if (!filteredResource(ly, ws, true, LayerInfo.class)) {
                 String wmtsLayerInfoName = wl.getName();
-                restoreLayerResources(sourceRestoreFolder, ws, wms, ftFolder, ly, wmtsLayerInfoName);
+                restoreLayerResources(sourceRestoreFodler, ws, wms, ftFolder, ly, wmtsLayerInfoName);
             }
         }
     }
 
-    @SuppressWarnings("unchecked")
     private void restoreWMSLayer(
-            Resource sourceRestoreFolder, WorkspaceInfo ws, WMSStoreInfo wms, Resource wmsFolder, WMSLayerInfo wl)
+            Resource sourceRestoreFodler, WorkspaceInfo ws, WMSStoreInfo wms, Resource wmsFolder, WMSLayerInfo wl)
             throws Exception {
         // - Prepare Folder
         Files.delete(wmsFolder.get(wl.getName()).dir());
@@ -937,13 +932,13 @@ public class CatalogBackupRestoreTasklet extends AbstractCatalogBackupRestoreTas
         for (LayerInfo ly : getCatalog().getLayers(wl)) {
             if (!filteredResource(ly, ws, true, LayerInfo.class)) {
                 String wmsLayerInfoName = wl.getName();
-                restoreLayerResources(sourceRestoreFolder, ws, wms, ftFolder, ly, wmsLayerInfoName);
+                restoreLayerResources(sourceRestoreFodler, ws, wms, ftFolder, ly, wmsLayerInfoName);
             }
         }
     }
 
     private void restoreLayerResources(
-            Resource sourceRestoreFolder,
+            Resource sourceRestoreFodler,
             WorkspaceInfo ws,
             HTTPStoreInfo httpStoreInfo,
             Resource ftFolder,
@@ -952,7 +947,7 @@ public class CatalogBackupRestoreTasklet extends AbstractCatalogBackupRestoreTas
             throws Exception {
         doWrite(ly, ftFolder, "layer.xml");
 
-        Resource ftResource = sourceRestoreFolder.get(
+        Resource ftResource = sourceRestoreFodler.get(
                 Paths.path("workspaces/" + ws.getName() + "/" + httpStoreInfo.getName(), wmsLayerInfoName));
         List<Resource> resources = Resources.list(
                 ftResource,
@@ -1032,7 +1027,6 @@ public class CatalogBackupRestoreTasklet extends AbstractCatalogBackupRestoreTas
         }
     }
 
-    @SuppressWarnings("unchecked")
     private void backupGwcLayer(
             final TileLayerCatalog gwcCatalog, final DefaultTileLayerCatalog gwcBackupCatalog, String layerName) {
         GeoServerTileLayerInfo gwcLayerInfo = gwcCatalog.getLayerByName(layerName);
@@ -1060,7 +1054,7 @@ public class CatalogBackupRestoreTasklet extends AbstractCatalogBackupRestoreTas
                 }
             } catch (NullPointerException e) {
                 if (getCurrentJobExecution() != null) {
-                    getCurrentJobExecution().addWarningExceptions(List.of(e));
+                    getCurrentJobExecution().addWarningExceptions(Arrays.asList(e));
                 }
             }
         }
@@ -1078,7 +1072,7 @@ public class CatalogBackupRestoreTasklet extends AbstractCatalogBackupRestoreTas
     }
 
     private WorkspaceInfo getLayerWorkspace(LayerInfo layerInfo) {
-        return layerInfo.getResource() != null
+        WorkspaceInfo ws = layerInfo.getResource() != null
                         && layerInfo.getResource().getStore() != null
                         && layerInfo.getResource().getStore().getWorkspace() != null
                 ? getCatalog()
@@ -1088,6 +1082,7 @@ public class CatalogBackupRestoreTasklet extends AbstractCatalogBackupRestoreTas
                                 .getWorkspace()
                                 .getName())
                 : null;
+        return ws;
     }
 
     /**
