@@ -16,6 +16,9 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import junit.framework.TestCase;
+import net.sf.json.JSON;
+import net.sf.json.JSONArray;
+import net.sf.json.JSONObject;
 import org.custommonkey.xmlunit.SimpleNamespaceContext;
 import org.custommonkey.xmlunit.XMLUnit;
 import org.custommonkey.xmlunit.XpathEngine;
@@ -26,9 +29,6 @@ import org.junit.After;
 import org.junit.Before;
 import org.junit.BeforeClass;
 import org.junit.Test;
-import org.kordamp.json.JSON;
-import org.kordamp.json.JSONArray;
-import org.kordamp.json.JSONObject;
 import org.springframework.mock.web.MockHttpServletResponse;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
@@ -70,7 +70,7 @@ public class AuthenticationFilterRestControllerMarshallingTest extends GeoServer
         }
 
         names.forEach(name -> {
-            String xpath = "//authfilter[name='%s']/atom:link".formatted(name);
+            String xpath = String.format("//authfilter[name='%s']/atom:link", name);
             try {
                 NodeList link = xp.getMatchingNodes(xpath, dom);
                 assertEquals(1, link.getLength());
@@ -103,14 +103,11 @@ public class AuthenticationFilterRestControllerMarshallingTest extends GeoServer
     }
 
     private static final String testViewXML =
-            """
-            <org.geoserver.security.config.SecurityInterceptorFilterConfig>
-              <name>viewXml</name>
-                <allowIfAllAbstainDecisions>false</allowIfAllAbstainDecisions>
-                <securityMetadataSource>restFilterDefinitionMap</securityMetadataSource>
-                <className>org.geoserver.security.filter.GeoServerSecurityInterceptorFilter</className>
-            </org.geoserver.security.config.SecurityInterceptorFilterConfig>
-            """;
+            "<org.geoserver.security.config.SecurityInterceptorFilterConfig>\n" + "  <name>viewXml</name>\n"
+                    + "    <allowIfAllAbstainDecisions>false</allowIfAllAbstainDecisions>\n"
+                    + "    <securityMetadataSource>restFilterDefinitionMap</securityMetadataSource>\n"
+                    + "    <className>org.geoserver.security.filter.GeoServerSecurityInterceptorFilter</className>\n"
+                    + "</org.geoserver.security.config.SecurityInterceptorFilterConfig>\n";
 
     // This only checks the values in web it does not check all possible fields
     @Test
@@ -133,16 +130,13 @@ public class AuthenticationFilterRestControllerMarshallingTest extends GeoServer
     }
 
     private static final String testViewJSON =
-            """
-            {
-                "org.geoserver.security.config.SecurityInterceptorFilterConfig": {
-                    "name": "viewJson",
-                        "className": "org.geoserver.security.filter.GeoServerSecurityInterceptorFilter",
-                        "allowIfAllAbstainDecisions": false,
-                        "securityMetadataSource": "restFilterDefinitionMap"
-                }
-            }\
-            """;
+            "{\n" + "    \"org.geoserver.security.config.SecurityInterceptorFilterConfig\": {\n"
+                    + "        \"name\": \"viewJson\",\n"
+                    + "            \"className\": \"org.geoserver.security.filter.GeoServerSecurityInterceptorFilter\",\n"
+                    + "            \"allowIfAllAbstainDecisions\": false,\n"
+                    + "            \"securityMetadataSource\": \"restFilterDefinitionMap\"\n"
+                    + "    }\n"
+                    + "}";
 
     @Test
     public void testView_JSON() throws Exception {
@@ -157,15 +151,12 @@ public class AuthenticationFilterRestControllerMarshallingTest extends GeoServer
         assertNotNull("false", jsonObject.getJSONObject("config"));
     }
 
-    private static final String testPostXML =
-            """
-            <org.geoserver.security.config.SecurityInterceptorFilterConfig>
-              <name>postXml</name>
-                <allowIfAllAbstainDecisions>false</allowIfAllAbstainDecisions>
-                <securityMetadataSource>restFilterDefinitionMap</securityMetadataSource>
-                <className>org.geoserver.security.filter.GeoServerSecurityInterceptorFilter</className>
-            </org.geoserver.security.config.SecurityInterceptorFilterConfig>
-            """;
+    private static final String testPostXML = "<org.geoserver.security.config.SecurityInterceptorFilterConfig>\n"
+            + "  <name>postXml</name>\n"
+            + "    <allowIfAllAbstainDecisions>false</allowIfAllAbstainDecisions>\n"
+            + "    <securityMetadataSource>restFilterDefinitionMap</securityMetadataSource>\n"
+            + "    <className>org.geoserver.security.filter.GeoServerSecurityInterceptorFilter</className>\n"
+            + "</org.geoserver.security.config.SecurityInterceptorFilterConfig>\n";
 
     @Test
     public void testPost_XML() throws Exception {
@@ -180,16 +171,13 @@ public class AuthenticationFilterRestControllerMarshallingTest extends GeoServer
     }
 
     private static final String testPostJSON =
-            """
-            {
-                "org.geoserver.security.config.SecurityInterceptorFilterConfig": {
-                    "name": "postJson",
-                        "className": "org.geoserver.security.filter.GeoServerSecurityInterceptorFilter",
-                        "allowIfAllAbstainDecisions": false,
-                        "securityMetadataSource": "restFilterDefinitionMap"
-                }
-            }\
-            """;
+            "{\n" + "    \"org.geoserver.security.config.SecurityInterceptorFilterConfig\": {\n"
+                    + "        \"name\": \"postJson\",\n"
+                    + "            \"className\": \"org.geoserver.security.filter.GeoServerSecurityInterceptorFilter\",\n"
+                    + "            \"allowIfAllAbstainDecisions\": false,\n"
+                    + "            \"securityMetadataSource\": \"restFilterDefinitionMap\"\n"
+                    + "    }\n"
+                    + "}";
 
     @Test
     public void testPost_JSON() throws Exception {
@@ -203,23 +191,19 @@ public class AuthenticationFilterRestControllerMarshallingTest extends GeoServer
         assertXpathExists("/org.geoserver.security.config.SecurityInterceptorFilterConfig/id", viewDocument);
     }
 
-    private static final String testSetupPutXml =
-            """
-            <org.geoserver.security.config.SecurityInterceptorFilterConfig>
-                <name>putXml</name>
-                    <className>org.geoserver.security.filter.GeoServerSecurityInterceptorFilter</className>
-                    <allowIfAllAbstainDecisions>false</allowIfAllAbstainDecisions>
-                    <securityMetadataSource>restFilterDefinitionMap</securityMetadataSource>
-            </org.geoserver.security.config.SecurityInterceptorFilterConfig>""";
+    private static final String testSetupPutXml = "<org.geoserver.security.config.SecurityInterceptorFilterConfig>\n"
+            + "    <name>putXml</name>\n"
+            + "        <className>org.geoserver.security.filter.GeoServerSecurityInterceptorFilter</className>\n"
+            + "        <allowIfAllAbstainDecisions>false</allowIfAllAbstainDecisions>\n"
+            + "        <securityMetadataSource>restFilterDefinitionMap</securityMetadataSource>\n"
+            + "</org.geoserver.security.config.SecurityInterceptorFilterConfig>";
 
-    private static final String testPutXml =
-            """
-            <org.geoserver.security.config.SecurityInterceptorFilterConfig>
-                <name>putXml</name>
-                    <className>org.geoserver.security.filter.GeoServerSecurityInterceptorFilter</className>
-                    <allowIfAllAbstainDecisions>false</allowIfAllAbstainDecisions>
-                    <securityMetadataSource>restFilterDefinitionMap</securityMetadataSource>
-            </org.geoserver.security.config.SecurityInterceptorFilterConfig>""";
+    private static final String testPutXml = "<org.geoserver.security.config.SecurityInterceptorFilterConfig>\n"
+            + "    <name>putXml</name>\n"
+            + "        <className>org.geoserver.security.filter.GeoServerSecurityInterceptorFilter</className>\n"
+            + "        <allowIfAllAbstainDecisions>false</allowIfAllAbstainDecisions>\n"
+            + "        <securityMetadataSource>restFilterDefinitionMap</securityMetadataSource>\n"
+            + "</org.geoserver.security.config.SecurityInterceptorFilterConfig>";
 
     @Test
     public void testPut_XML() throws Exception {
@@ -248,14 +232,12 @@ public class AuthenticationFilterRestControllerMarshallingTest extends GeoServer
         TestCase.assertEquals(403, response.getStatus());
     }
 
-    private static final String testSetupDeleteXml =
-            """
-            <org.geoserver.security.config.SecurityInterceptorFilterConfig>
-                <name>deleteXml</name>
-                    <className>org.geoserver.security.filter.GeoServerSecurityInterceptorFilter</className>
-                    <allowIfAllAbstainDecisions>false</allowIfAllAbstainDecisions>
-                    <securityMetadataSource>restFilterDefinitionMap</securityMetadataSource>
-            </org.geoserver.security.config.SecurityInterceptorFilterConfig>""";
+    private static final String testSetupDeleteXml = "<org.geoserver.security.config.SecurityInterceptorFilterConfig>\n"
+            + "    <name>deleteXml</name>\n"
+            + "        <className>org.geoserver.security.filter.GeoServerSecurityInterceptorFilter</className>\n"
+            + "        <allowIfAllAbstainDecisions>false</allowIfAllAbstainDecisions>\n"
+            + "        <securityMetadataSource>restFilterDefinitionMap</securityMetadataSource>\n"
+            + "</org.geoserver.security.config.SecurityInterceptorFilterConfig>";
 
     @Test
     public void testDelete() throws Exception {
